Update CLI config and docs

--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,12 @@ ZOEA_DOCS_PORT=8001
 ZOEA_POSTGRES_PORT=5433
 
 # -----------------------------------------------------------------------------
+# Docker Compose (Backend Command)
+# -----------------------------------------------------------------------------
+# Override the backend command in Docker Compose (zoea-core stack).
+# ZOEA_BACKEND_COMMAND="uv run gunicorn zoea.wsgi:application --bind 0.0.0.0:8000 --workers 2"
+
+# -----------------------------------------------------------------------------
 # CORS / Frontend Configuration
 # -----------------------------------------------------------------------------
 # Frontend URL for CORS (required for production cross-origin requests)
