Update naming; org docs files; ports overrides

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,8 @@ LOG_LEVEL=INFO
 # DATABASE_URL=postgresql://zoea:zoea@127.0.0.1:5433/zoea
 # Production (Supabase):
 # DATABASE_URL=postgresql://postgres:PASSWORD@db.xxx.supabase.co:5432/postgres
+# Zoea core Docker Compose (packages/zoea-core)
+# ZOEA_CORE_DATABASE_URL=postgresql://zoea:zoea@db:5432/zoea
 
 # Docker PostgreSQL settings
 POSTGRES_USER=zoea
@@ -58,17 +60,17 @@ POSTGRES_DB=zoea
 # -----------------------------------------------------------------------------
 # Port Configuration (Development)
 # -----------------------------------------------------------------------------
-ZOEA_BACKEND_PORT=8000
 ZOEA_FRONTEND_PORT=5173
 ZOEA_DOCS_PORT=8001
-# Local Postgres port (use 5433 to avoid conflict with system Postgres on 5432)
-ZOEA_POSTGRES_PORT=5433
+# Zoea core Docker Compose ports (packages/zoea-core)
+ZOEA_CORE_BACKEND_PORT=8000
+ZOEA_CORE_POSTGRES_PORT=5433
 
 # -----------------------------------------------------------------------------
 # Docker Compose (Backend Command)
 # -----------------------------------------------------------------------------
 # Override the backend command in Docker Compose (zoea-core stack).
-# ZOEA_BACKEND_COMMAND="uv run gunicorn zoea.wsgi:application --bind 0.0.0.0:8000 --workers 2"
+# ZOEA_CORE_BACKEND_COMMAND="uv run gunicorn zoea.wsgi:application --bind 0.0.0.0:8000 --workers 2"
 
 # -----------------------------------------------------------------------------
 # CORS / Frontend Configuration
