--- a/.mise.toml
+++ b/.mise.toml
@@ -39,11 +39,11 @@ run = [
 
 [tasks.dev-backend]
 description = "Run backend ASGI server (Django via uvicorn)"
-run = "cd packages/zoea-core && uv run uvicorn zoea.asgi:app --reload --host 0.0.0.0 --port ${ZOEA_BACKEND_PORT:-8000}"
+run = "cd packages/zoea-core && uv run uvicorn zoea.asgi:app --reload --host 0.0.0.0 --port ${ZOEA_CORE_BACKEND_PORT:-8000}"
 
 [tasks.dev-backend-django]
 description = "Run Django development server"
-run = "cd packages/zoea-core && uv run python manage.py runserver ${ZOEA_BACKEND_PORT:-8000}"
+run = "cd packages/zoea-core && uv run python manage.py runserver ${ZOEA_CORE_BACKEND_PORT:-8000}"
 
 [tasks.dev-frontend]
 description = "Run Vite development server"
@@ -157,7 +157,7 @@ run = "cd packages/zoea-core && uv run python manage.py dbshell"
 
 [tasks.db-start]
 description = "Start local Postgres (Docker)"
-run = "docker compose --profile postgres up -d db && echo 'Postgres running on port ${ZOEA_POSTGRES_PORT:-5432}'"
+run = "docker compose --profile postgres up -d db && echo 'Postgres running on port ${ZOEA_CORE_POSTGRES_PORT:-5432}'"
 
 [tasks.db-stop]
 description = "Stop local Postgres (Docker)"
